--- a/styles.styl
+++ b/styles.styl
@@ -332,12 +332,10 @@ input:-ms-input-placeholder
         transform translate3d(0, 0,0)
 
 .resolutionLoad-enter
-    opacity: 0
     animation: slideIn 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
 
 .resolutionLoad-leave
     animation: slideOut 0.4s cubic-bezier(0.165, 0.84, 0.44, 1)
-    opacity: 1.0
 
 @keyframes slideIn
     0%
@@ -374,3 +372,9 @@ input:-ms-input-placeholder
 .route-appear
     opacity: 0
     animation: slideUp 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
+
+ul
+  .resolutions
+      li
+        a
+          text-decoration none
